<resources>
    <string name="app_name">ZOFIA JANICKA</string>
    <string name="mail">zofjanicka@gmail.com</string>
    <string name="phone">+48 790 436 072</string>
    <string name="github">https://github.com/niezocha</string>
    <string name="linkedin">https://www.linkedin.com/in/zofia-janicka-10a00184/</string>
    <string name="profile_text"><![CDATA[Currently changing my profession to Android developer. Extremely motivated to grow professionally in this new field of work. Like to learn, test and perfect new skills. Looking forward to all the challenges and opportunities that career in software development brings.]]></string>
    <string name="sggw">SGGW - Warsaw University of Life Science</string>
    <string name="mgr_sggw">Master\'s studies in Biology</string>
    <string name="time_sggw">OCT 2009 – JUN 2012</string>
    <string name="univar">University of Warsaw</string>
    <string name="time_univar">OCT 2010 – JUN 2013</string>
    <string name="mgr_univar">Master\'s studies in Biotechnology</string>
    <string name="sdacademy">Software Development Academy</string>
    <string name="time_sda">DEC 2016 – MAY 2017</string>
    <string name="course_sda">Java and Android bootcamp 360h</string>
    <string name="adecco">Adecco Poland, Project Coordinator</string>
    <string name="time_adecco">SEP 2014 – NOV 2014</string>
    <string name="descr_adecco">Recruiting, scheduling and supervising temporary staff for Kooza by Cirque du Soleil</string>
    <string name="time_leniviec1">AUG 2015 – JUN 2016</string>
    <string name="leniwiec1">Leniwiec Biz, Technical Support Specialist</string>
    <string name="descr_leniwiec1">Provided technical support, including applying changes to websites and databases</string>
    <string name="descr_leniwiec2">Ensured proper functioning of the department, trained new employees, worked on developing support protocols</string>
    <string name="time_leniwiec2">JUL 2016 – FEB 2017</string>
    <string name="leniwiec2">Leniwiec Biz, Head of Technical Support</string>
    <string name="descr_braincode">Developed Android application for easy gift choosing using Allegro Web API</string>
    <string name="time_braincode">MAR 2017</string>
    <string name="braincode">Brain Code 2017 Hackathon attendee</string>
    <string name="mail_subject">CV Zofia Janicka - Junior Android Developer</string>
    <string name="mail_text">In the attachment you will find my resume.</string>
    <string name="profile">PROFILE</string>
    <string name="mailto1">Like what you\'re seeing?</string>
    <string name="mailto2">Enter your e-mail to get this resume</string>
    <string name="expirience">EXPERIENCE</string>
    <string name="education">EDUCATION</string>
    <string name="contact">CONTACT</string>
    <string name="bootcamp">JAVA AND ANDROID BOOTCAMP</string>
    <string name="bootcamp_text">Java and Android bootcamp (360h) included:
Basics of Java (including Java 8).
Introduction to Android, Android SDK.
Basics of materlian design, databases, http comunication.
Usage of google play services.
Creating simple applications (both single activity and multicomponent). </string>
    <string name="skills">SKILLS</string>
    <string name="tools">TOOLS</string>
    <string name="lang">LANGUAGES</string>
    <string name="eng">English</string>
    <string name="pol">Polish (native)</string>
    <string name="span">Spanish</string>
    <string name="rus">Russian</string>
    <string name="hobby">HOBBIES</string>
</resources>
