<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lang"
        android:text="@string/lang"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/lang_text"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/pol"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:layout_width="160dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_full_star"
                android:layout_width="25dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_full_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_full_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_full_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_full_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/eng"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:layout_width="160dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_full_star"
                android:layout_width="25dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_full_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_full_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_halfstar"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/span"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:layout_width="160dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_full_star"
                android:layout_width="25dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/rus"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:layout_width="160dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_full_star"
                android:layout_width="25dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <ImageView
                android:src="@drawable/ic_star"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>